--- a/index.html
+++ b/index.html
@@ -1,22 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="style.css" />
     <title>Animals Being Jerks!</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="renderContent">
-        <h1>Content:</h1>
-        <div class="contentContainer">
-            
-        </div>
+      <h1>Content:</h1>
+      <div class="contentContainer"></div>
     </div>
 
-
-    
     <script src="./script.js"></script>
-</body>
+  </body>
 </html>
