--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
       <h1>Content:</h1>
       <div class="contentContainer"></div>
     </div>
-
+    <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/7.8.0/firebase-app.js"></script>
     <script src="./script.js"></script>
   </body>
 </html>
